add base components navbar
Signed-off-by: Vlad6555z <Vlad6555z@gmail.com>

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 body {
   font: 400 21px sans-serif;
-  color: rgba(0,0,0,.84);
+  color: rgba(0, 0, 0, 0.84);
   line-height: 1.58;
-  letter-spacing: -.003em;   
+  letter-spacing: -0.003em;
 }
 
 h1 {
@@ -21,16 +21,19 @@ a {
 .app {
   display: grid;
   /* grid-auto-rows: 65px; */
-  grid-template-columns: minmax(100px,200px) 3fr;
+  grid-template-columns: minmax(100px, 200px) 3fr;
   grid-template-rows: 65px 700px 65px;
   grid-gap: 30px;
-  grid-template-areas: 
-      "header header"
-      "navbar cont"
-      "footer footer"
+  grid-template-areas:
+    "header header"
+    "navbar cont"
+    "Footer Footer";
 }
 
-
+.app {
+  background: #f4f2f3;
+  height: 100vh;
+}
 
 .navbar {
   grid-area: navbar;
@@ -40,7 +43,7 @@ a {
   grid-area: cont;
 }
 
-.footer {
+.Footer {
   grid-area: footer;
 }
 
@@ -60,7 +63,6 @@ a {
   width: 150px;
 }
 
-
 .inform button {
   color: #03a87c;
   border: none;
@@ -71,11 +73,10 @@ a {
 
 .navbar {
   border: 1px solid #ccc;
-  box-shadow: 2px 2px rgba(0,0,0,.05);;
+  box-shadow: 2px 2px rgba(0, 0, 0, 0.05);
 }
 
 .profile {
   justify-content: flex-start;
   align-items: baseline;
 }
-
