--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ a {
 }
 
 .Footer {
-  grid-area: footer;
+  grid-area: Footer;
 }
 
 .flex-box {
@@ -52,11 +52,6 @@ a {
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-}
-
-.logotype img {
-  width: 65px;
-  height: auto;
 }
 
 .inform {
@@ -69,14 +64,4 @@ a {
   font: 400 16px/30px sans-serif;
   background: none;
   cursor: pointer;
-}
-
-.navbar {
-  border: 1px solid #ccc;
-  box-shadow: 2px 2px rgba(0, 0, 0, 0.05);
-}
-
-.profile {
-  justify-content: flex-start;
-  align-items: baseline;
 }
