--- a/src/hoc/Layout.module.css
+++ b/src/hoc/Layout.module.css
@@ -1,2 +1,21 @@
 .Layout {
+  background: #f4f2f3;
+  height: 100vh;
+  display: grid;
+  /* grid-auto-rows: 65px; */
+  grid-template-columns: minmax(100px, 200px) 3fr;
+  grid-template-rows: 65px 1fr 40px;
+  grid-gap: 30px;
+  grid-template-areas:
+    "header header"
+    "navbar cont"
+    "Footer Footer";
+}
+
+.navbar {
+  grid-area: navbar;
+}
+
+.content {
+  grid-area: cont;
 }
