markup massage component

--- a/src/components/Messages/Messages.module.css
+++ b/src/components/Messages/Messages.module.css
@@ -1,2 +1,17 @@
 .Messages {
 }
+
+.messageContainer {
+}
+
+.dialogItems {
+}
+
+.dialogItems .item {
+}
+
+.messageItems {
+}
+
+.messageItems .item {
+}
