delete rerender js

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   grid-area: header;
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
-  background: #fff;
+  background: #f4f5fa;
 }
 
 .container {
